--- a/styles/header/header.css
+++ b/styles/header/header.css
@@ -13,34 +13,25 @@
 	
 }
 
-.header__logo img {
-
-}
-
 .header__menu {
 	font-family: progresspixel;
 	font-size: 18px;
 	width: 700;
-	/* line-height: calc(30.6 / 700 * 100%); */
-	
-	
+	line-height: calc(31 / 18 * 100%);
+	/* line-height: 31px; */
 }
 .menu {
 	flex: 1 1 100%;
 }
 .menu__list {
-	
 	display: flex;
 	gap: 42px;
 	justify-content: flex-end;
-
-	
 }
 .menu__item {
 	display: flex;
 	align-items: center;
 }
-
 .menu__link {
 	background: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%);
 	-webkit-text-fill-color: transparent;
