--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,8 +15,61 @@ a {
   box-sizing: border-box;
 }
 
+/* scroll bar */
+body::-webkit-scrollbar {
+  background-color: #fff;
+  width: 16px;
+}
+
+/* background of the scrollbar except button or resizer */
+body::-webkit-scrollbar {
+  background-color: #fff;
+  width: 16px;
+}
+
+/* background of the scrollbar except button or resizer */
+body::-webkit-scrollbar-track {
+  background-color: #fff;
+  /* background: transparent; */
+}
+
+/* scrollbar itself */
+body::-webkit-scrollbar-thumb {
+  background-color: #babac0;
+  /* border-radius: 16px; */
+  border: 4px solid #fff;
+  
+}
+
+/* set button(top and bottom of the scrollbar) */
+body::-webkit-scrollbar-button {
+  display:none;
+}
+
+/* Main container */
+
 .container {
   max-width: 1210px;
   margin: 0 auto;
   padding: 0 15px 0 15px;
 }
+
+/* h1 title */
+.main__title {
+  font-family: progresspixel;
+  font-size: 64px;
+  font-weight: 700;
+  line-height: calc(93 / 64 * 100%);
+  color: #F3F3F3;
+}
+
+/* @mexin gradient-text {
+  background: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%);
+	-webkit-text-fill-color: transparent;
+	-webkit-background-clip: text;
+	background-clip: text;
+}
+
+@mexin gradient-box {
+
+} */
