--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,11 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  
+
+  /* cursor: url('../public/content/icons/cursor.png'), pointer; */
+  
+  /* z-index: -1; */
 }
 
 a {
@@ -36,14 +41,20 @@ body::-webkit-scrollbar-track {
 /* scrollbar itself */
 body::-webkit-scrollbar-thumb {
   background-color: #babac0;
-  /* border-radius: 16px; */
   border: 4px solid #fff;
-  
 }
 
 /* set button(top and bottom of the scrollbar) */
 body::-webkit-scrollbar-button {
   display:none;
+}
+
+.wrapper {
+  position: relative;
+  background-color: #D4D6D7;
+  background-image: url('../public/content/backgroungBase.jpg');
+  z-index: 0;
+  
 }
 
 /* Main container */
@@ -55,12 +66,28 @@ body::-webkit-scrollbar-button {
 }
 
 /* h1 title */
-.main__title {
+.main-title {
   font-family: progresspixel;
   font-size: 64px;
   font-weight: 700;
   line-height: calc(93 / 64 * 100%);
   color: #F3F3F3;
+}
+
+/* h2 title*/
+.title-section {
+  font-family: progresspixel;
+  font-size: 48px;
+  line-height: calc(82 / 48 * 100%);
+
+  /* Gradient */
+  background: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  /* Shadow */
+  filter: drop-shadow(2px 4px 0px #000000);
+  -webkit-filter: drop-shadow(2px 4px 0px #000000);
 }
 
 /* @mexin gradient-text {
