--- a/styles/boxGradient.css
+++ b/styles/boxGradient.css
@@ -1,5 +1,7 @@
 .box-gradient {
-	border: 10px solid;
+	--border-size: 10px;
+	border: var(--border-size) solid;
+	
 	border-image: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%);
 	border-image-slice: 1;
 
@@ -15,4 +17,13 @@
 
 .box-gradient__text {
 	
+}
+
+@media(max-width: 600px) {
+	.box-gradient {
+		--border-size: 5px;	
+	}
+	.box-gradient__inner {
+		padding: 24px;
+	}
 }
