--- a/styles/header/header.css
+++ b/styles/header/header.css
@@ -14,6 +14,9 @@
 
 .header__menu {
 }
+.header__burger {
+	display: none;
+}
 .menu {
 	flex: 1 1 100%;
 }
@@ -37,4 +40,24 @@
 	-webkit-text-fill-color: transparent;
 	-webkit-background-clip: text;
 	background-clip: text;
+}
+
+
+@media(max-width: 800px) {
+	.header {
+		padding: 24px 0;
+	}
+	.header__burger {
+		display: block;
+	}
+	
+	.menu__body {
+		display: none;
+	}
+}
+
+@media(max-width: 500px) {
+	.header {
+		padding: 12px 0;
+	}
 }
