--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,10 +5,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   
-  
-  /* cursor: url('../public/content/icons/cursor.png'), pointer; */
-  
-  /* z-index: -1; */
 }
 
 a {
@@ -47,6 +43,9 @@ body::-webkit-scrollbar-thumb {
 /* set button(top and bottom of the scrollbar) */
 body::-webkit-scrollbar-button {
   display:none;
+}
+.fix-position {
+  overflow: hidden;
 }
 
 .wrapper {
