--- a/styles/header/header.css
+++ b/styles/header/header.css
@@ -52,7 +52,35 @@
 	}
 	
 	.menu__body {
-		display: none;
+		/* padding: 50px; */
+		z-index: 2;
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		
+		background-color: #D4D6D7;
+		
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		
+		transition: transform 0.5s ease;
+		transform: translate(100%);
+		
+	}
+	.menu__body.active-menu {
+		transform: translate(0);
+	}
+	
+	.menu__list {
+		flex-direction: column;
+		align-items: center;
+		
+	}
+	.menu__link {
+		font-size: 30px;
 	}
 }
 
