--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,6 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  
 }
 
 a {
@@ -47,8 +46,16 @@ body::-webkit-scrollbar-button {
 .fix-position {
   overflow: hidden;
 }
+/* main {
+  min-height: 100%;
+}
+
+#__next {
+  min-height: 100%;
+} */
 
 .wrapper {
+  height: 100vh;
   position: relative;
   background-color: #D4D6D7;
   background-image: url('../public/content/backgroungBase.jpg');
