--- a/styles/PageHome/PageHome.css
+++ b/styles/PageHome/PageHome.css
@@ -10,8 +10,8 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	height: 100vh;
-	width: 100vw;
+	height: 100%;
+	width: 100%;
 	z-index: -1;
 }
 
@@ -185,7 +185,7 @@
 @media(max-width: 920px) {
 	
 }
-
+/* 
 @media(max-width: 800px) {
 	.welcome__title {
 		font-size: 54px;
@@ -200,7 +200,7 @@
 	.welcome__title {
 		font-size: 30px;
 	}
-}
+} */
 
 @media (max-width: 500px) {
 	.welcome {
