--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,7 +55,7 @@ body::-webkit-scrollbar-button {
 } */
 
 .wrapper {
-  height: 100vh;
+  min-height: 100%;
   position: relative;
   background-color: #D4D6D7;
   background-image: url('../public/content/backgroungBase.jpg');
@@ -95,6 +95,23 @@ body::-webkit-scrollbar-button {
   filter: drop-shadow(2px 4px 0px #000000);
   -webkit-filter: drop-shadow(2px 4px 0px #000000);
 }
+
+@media(max-width: 800px) {
+	.main-title  {
+		font-size: 54px;
+	}
+}
+@media(max-width: 650px) {
+	.main-title  {
+		font-size: 44px;
+	}
+}
+@media(max-width: 550px) {
+	.main-title  {
+		font-size: 30px;
+	}
+}
+
 
 @media (max-width: 500px) {
   .title-section {
