--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,12 +48,11 @@ body::-webkit-scrollbar-button {
   overflow: hidden;
 }
 
-.wrapper {
+main {
   position: relative;
   background-color: #D4D6D7;
   background-image: url('../public/content/backgroungBase.jpg');
   z-index: 0;
-  
 }
 
 /* Main container */
