--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,15 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+}
+
+#__next {
+  height: 100%;
+}
+
+main {
+  height: 100%;
 }
 
 a {
@@ -95,11 +104,36 @@ body::-webkit-scrollbar-button {
   filter: drop-shadow(2px 4px 0px #000000);
   -webkit-filter: drop-shadow(2px 4px 0px #000000);
 }
+.title-section-white {
+  font-family: 'progresspixel';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: calc(82 / 48 * 100%);
+  color: #FFFFFF;
+  text-shadow: 2px 4px 0px #000000;
+}
+
+.gradient-title {
+  font-family: serif;
+  font-family: progresspixel;
+  font-size: 30px;
+  line-height: calc(51 / 30 * 100%);
+  background: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  width: fit-content;
+}
 
 @media(max-width: 800px) {
 	.main-title  {
 		font-size: 54px;
 	}
+
+  .gradient-title {
+    font-size: 24px;
+  }
 }
 @media(max-width: 650px) {
 	.main-title  {
