--- a/styles/header/header.css
+++ b/styles/header/header.css
@@ -10,10 +10,10 @@
 .header__logo {
 	max-width: 105px;
 	max-height: 67px;
+
+	cursor: pointer;
 }
 
-.header__menu {
-}
 .header__burger {
 	display: none;
 }
@@ -42,7 +42,6 @@
 	-webkit-background-clip: text;
 	background-clip: text;
 }
-
 
 @media(max-width: 800px) {
 	.header {
