--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,6 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-
 }
 
 #__next {
@@ -50,28 +49,29 @@ body::-webkit-scrollbar-thumb {
 
 /* set button(top and bottom of the scrollbar) */
 body::-webkit-scrollbar-button {
-  display:none;
+  display: none;
 }
 .fix-position {
   overflow: hidden;
 }
 
-html, body {
+html,
+body {
   min-height: 100%;
 }
 
 .wrapper {
   position: relative;
-  background-color: #D4D6D7;
-  background-image: url('../public/content/backgroungBase.jpg');
+  background-color: #030306;
+  /* background-image: url('../public/content/backgroungBase.jpg'); */
   z-index: 1;
   min-height: 100%;
 }
 
 main {
   position: relative;
-  background-color: #D4D6D7;
-  background-image: url('../public/content/backgroungBase.jpg');
+  background-color: #d4d6d7;
+  background-image: url("../public/content/backgroungBase.jpg");
   z-index: 1;
   min-height: 100%;
 }
@@ -90,7 +90,7 @@ main {
   font-size: 64px;
   font-weight: 700;
   line-height: calc(93 / 64 * 100%);
-  color: #F3F3F3;
+  color: #f3f3f3;
 }
 
 /* h2 title*/
@@ -100,7 +100,7 @@ main {
   line-height: calc(82 / 48 * 100%);
 
   /* Gradient */
-  background: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%);
+  background: linear-gradient(90deg, #f45f89 0%, #8d0b93 50%, #321575 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -109,12 +109,12 @@ main {
   -webkit-filter: drop-shadow(2px 4px 0px #000000);
 }
 .title-section-white {
-  font-family: 'progresspixel';
+  font-family: "progresspixel";
   font-style: normal;
   font-weight: 700;
   font-size: 48px;
   line-height: calc(82 / 48 * 100%);
-  color: #FFFFFF;
+  color: #ffffff;
   text-shadow: 2px 4px 0px #000000;
 }
 
@@ -123,33 +123,32 @@ main {
   font-family: progresspixel;
   font-size: 30px;
   line-height: calc(51 / 30 * 100%);
-  background: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%);
+  background: linear-gradient(90deg, #f45f89 0%, #8d0b93 50%, #321575 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   width: fit-content;
 }
 
-@media(max-width: 800px) {
-	.main-title  {
-		font-size: 54px;
-	}
+@media (max-width: 800px) {
+  .main-title {
+    font-size: 54px;
+  }
 
   .gradient-title {
     font-size: 24px;
   }
 }
-@media(max-width: 650px) {
-	.main-title  {
-		font-size: 44px;
-	}
+@media (max-width: 650px) {
+  .main-title {
+    font-size: 44px;
+  }
 }
-@media(max-width: 550px) {
-	.main-title  {
-		font-size: 30px;
-	}
+@media (max-width: 550px) {
+  .main-title {
+    font-size: 30px;
+  }
 }
-
 
 @media (max-width: 500px) {
   .title-section {
