--- a/styles/_fonts.css
+++ b/styles/_fonts.css
@@ -1,19 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
 @font-face {
-    font-family: 'progresspixel';
-    src: local('progresspixel'), 
-        url('../src/fonts/progresspixel-bold.woff2') format('woff2'),
-        url('../src/fonts/progresspixel-bold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-    font-display: auto;
+  font-family: "progresspixel";
+  src: local("progresspixel"),
+    url("../src/fonts/progresspixel-bold.woff2") format("woff2"),
+    url("../src/fonts/progresspixel-bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: auto;
 }
 
 @font-face {
-    font-family: 'Pixel Font7';
-    src: local('Pixel Font7'), 
-        url('../src/fonts/PixelFont-7.woff2') format('woff2'),
-        url('../src/fonts/PixelFont-7.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
-    font-display: auto;
+  font-family: "Pixel Font7";
+  src: local("Pixel Font7"),
+    url("../src/fonts/PixelFont-7.woff2") format("woff2"),
+    url("../src/fonts/PixelFont-7.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: auto;
 }
