--- a/src/styles/PageHome/CartSteps.css
+++ b/src/styles/PageHome/CartSteps.css
@@ -1,60 +1,19 @@
 .cart-step {
 	display: flex;
 	align-items: center;
-	margin-bottom: 50px;
 	max-width: fit-content;
+	color: #EDEEF2;
 }
 .cart-step__label {
 	display: flex;
-	gap: 15px;
+	/* gap: 15px; */
 	position: relative;
-	
-}
-.cart-step__number {
-	z-index: 3;
-	position: absolute;
-	top: 0;
-	left: 0;
-
-	font-family: progresspixel;
-	font-size: 73px;
-	line-height: calc(82 / 48 * 100%);
-
-	/* Gradient */
-	background: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%);
-	background-clip: text;
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	/* Shadow */
-	filter: drop-shadow(8.15385px 8.15385px 0px #000000);
-	-webkit-filter: drop-shadow(8.15385px 8.15385px 0px #000000);
-}
-.cart-step__img {
-	z-index: 2;
-	margin-left: 70px;
-	position: relative;
-	overflow: hidden;
-
-	width: 240px;
-	height: 240px;
-	
-	border-radius: 50%;
-	/* border: 4px solid; */
-	/* border-image: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%); */
-	/* border-image-slice: 1; */
-
 }
 .cart-step__box-text {
-	flex: 1 auto;
-	margin-left: -3vw;
-	font-family: 'Pixel Font7';
-	font-size: 26px;
+	/* flex: 1 auto; */
+	font-family: main;
+	font-size: 32px;
 	line-height: calc(36 / 26 * 100%);
-}
-
-.box-gradient {
-}
-.box-gradient__inner {
 }
 
 @media(max-width: 920px) {
@@ -63,7 +22,7 @@
 		align-items: flex-start;
 	}
 	.cart-step__label {
-		margin-bottom: 24px;
+		/* margin-bottom: 24px; */
 	}
 	.cart-step__box-text {
 		margin-left: 0;
