--- a/src/styles/PageHome/DateItem.css
+++ b/src/styles/PageHome/DateItem.css
@@ -2,16 +2,9 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-
-	font-family: 'progresspixel';
-	
-	font-weight: 700;
-	
-	
-/* identical to box height */
-
-
-color: #1A1B56;
+	font-family: 'main';
+	font-weight: 400;
+	color: #EDEEF2;
 }
 .date-item__logo {
 	width: 248px;
@@ -21,11 +14,12 @@ color: #1A1B56;
 }
 .date-item__title {
 	margin-bottom: 25px;
-	font-size: 30px;
+	font-size: 24px;
 	line-height: calc(56 / 30 * 100%);
+	font-family: heading;
 }
 .date-item__date {
-	font-family: 'Pixel Font7';
+	font-family: 'main';
 	font-size: 35px;
 	line-height: calc(35 / 35 * 100%);
 }
