--- a/src/styles/PageHome/Gallery.css
+++ b/src/styles/PageHome/Gallery.css
@@ -1,29 +1,23 @@
-.gallery {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	gap: 20px
-}
-.gallery__item {
-	overflow: hidden;
-	flex: 1 auto;
-	border: 5px solid;
-	border-image-source: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%);
-	border-image-slice: 1;
-	/* max-width: 350px; */
-	height: 350px;
-
-	overflow: hidden;
-	position: relative;
-
-	filter: drop-shadow(2px 4px 0px #000000);
-	-webkit-filter: drop-shadow(2px 4px 0px #000000);	
-}
-.gallery__image {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	object-position: center;
+.Slider {
+  /* max-height: 627px; */
 }
 
+.slick-dots li button:before {
+  content: '';
+  font-size: 0px;
+  line-height: 0px;
+  
+  margin-top: 48px;
 
+  opacity: 0.2;
+  color: #A4AAB9;;
+  background-color: #A4AAB9;
+  width: 16px;
+  height: 16px;
+}
+
+.slick-dots li.slick-active button:before {
+  opacity: 1;
+  color: #EDEEF2;
+  background-color: #EDEEF2;
+}
