--- a/src/styles/PageHome/PageHome.css
+++ b/src/styles/PageHome/PageHome.css
@@ -2,229 +2,222 @@
 .welcome {
   padding: 148px 0 324px 0;
   position: relative;
-	overflow: hidden;
+  overflow: hidden;
 }
 .welcome__bg {
-	overflow: hidden;
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 100%;
-	z-index: -1;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
 }
 
 .welcome__title {
-	/* max-width: 760px; */
-	margin-bottom: 85px;
+  /* max-width: 760px; */
+  margin-bottom: 85px;
 }
 .welcome__list {
-	max-width: 360px;
-	margin-bottom: 124px;
+  max-width: 360px;
+  margin-bottom: 48px;
 }
 
 /* maybe переделать логику обертки для белой кнопки */
 .welcome__item {
-	font-family: main;
-	font-size: 40px;
-	line-height: calc(40 / 40 * 100%);
-	color: #fff;
-	position: relative;
-	padding-left: 68px;
+  font-family: main;
+  font-size: 40px;
+  line-height: calc(40 / 40 * 100%);
+  color: #fff;
+  position: relative;
+  padding-left: 68px;
 }
 
-.whiteBtn  {
-	padding-left: 3px;
+.whiteBtn {
+  padding-left: 3px;
 }
 
 .welcome__item .whiteBtn__inner {
-    padding-left: 68px;
+  padding-left: 68px;
 }
 
 .welcome__item::before {
-    content: '';
-    position: absolute;
-    height: 23px;
-    width: 23px;
-    background: #030306;
-    left: 19px;
-    top: 50%;
-    transform: translateY(-50%);
+  content: "";
+  position: absolute;
+  height: 23px;
+  width: 23px;
+  background: #030306;
+  left: 19px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .welcome__item:not(:last-child) {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 .welcome__block-btn {
-	display: flex;
-	
+  display: flex;
 }
 .welcome__btn {
-	/* display: flex; */
-	flex: 1 auto;
-	max-width: 388px;
-	font-size: 56px;
-	line-height: (51 / 30 * 100%);
+  /* display: flex; */
+  flex: 1 auto;
+  max-width: 388px;
+  font-size: 56px;
+  line-height: (51 / 30 * 100%);
 }
 
 /* About section*/
 
 .about-project {
-	padding: 100px 0 170px 0;
+  padding: 100px 0 170px 0;
 }
 
 .about-project__title {
-	margin: 0 0 60px 0;
+  margin: 0 0 48px 0;
 }
 
 .about-project__text {
-	font-family: main;
-	font-size: 32px;
-	line-height: calc(36 / 26 * 100%);
-	color: #EDEEF2;
-	font-weight: 400;
-	margin-bottom: 64px;
+  font-family: main;
+  font-size: 32px;
+  line-height: calc(32 / 32 * 100%);
+  color: #edeef2;
+  font-weight: 400;
+  margin-bottom: 64px;
 }
 
 /* How to play section */
 
 .how-to-play {
-	padding: 0px 0 0px 0;
+  padding: 0px 0 296px 0;
 }
 
 .how-to-play__content {
-	padding: 40px;
+  padding: 40px;
+  background: rgba(21, 25, 31, 0.8);
 }
 
 .how-to-play__title {
-	margin: 0 0 48px 0;
+  margin: 0 0 48px 0;
 }
 
-.how-to-play__cart-step:nth-child(even) {
-	transform: translateX(14vw);
+.how-to-play__li:not(:last-child) {
+  margin-bottom: 40px;
 }
-.how-to-play__cart-step:nth-child(even) .cart-step__box-text {
-	max-width: 800px;
-}
-
 /* Dates section*/
 
 .dates {
-	padding: 0 0 170px 0;
+  padding: 0 0 0px 0;
 }
 
 .datas__title {
-	margin: 0 auto;
-	margin-bottom: 60px;
-	max-width: fit-content;
+  /* margin: 0 auto; */
+  margin-bottom: 79px;
+  max-width: fit-content;
 }
 
 .dates__content {
-	display: flex;
-	justify-content: space-around;
+  display: flex;
+  justify-content: space-between;
 }
 
 /* Start Section */
 .call-to-action {
-	padding: 0 0 170px 0;
+  padding: 310px 0 333px 0;
 }
 
 .call-to-action__title {
-	max-width: fit-content;
-	margin: 0 auto;
-	margin-bottom: 116px;
-	text-align: center;
+  margin-bottom: 64px;
+  text-align: center;
 }
 
 .call-to-action__inner {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Contacts */
 
 .contacts {
-	padding-bottom: 70px;
+  padding-bottom: 70px;
 }
 
 .contacts__container {
-	justify-content: flex-end;
-	display: flex;
-	align-items: center;
+  justify-content: flex-end;
+  display: flex;
+  align-items: center;
 }
 
 .contacts__text {
-	margin-right: 30px;
+  margin-right: 30px;
 
-	font-family: 'Pixel Font7';
-	font-weight: 250;
-	font-size: 40px;
-	line-height: calc(40 / 40 * 100%);
-	color: #1A1B56;	
+  font-family: "Pixel Font7";
+  font-weight: 250;
+  font-size: 40px;
+  line-height: calc(40 / 40 * 100%);
+  color: #1a1b56;
 }
 
 .contacts__link {
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 .contactas__img {
-	position: relative;
-	width: 56px;
-	height: 56px;
+  position: relative;
+  width: 56px;
+  height: 56px;
 }
 
-@media(max-width: 1400px) {
-	.how-to-play__cart-step:nth-child(even) {
-		transform: none;		
-	}
-	.how-to-play__cart-step:nth-child(even) .cart-step__box-text {
-		max-width: 100%;
-	}
+@media (max-width: 1400px) {
+  .how-to-play__cart-step:nth-child(even) {
+    transform: none;
+  }
+  .how-to-play__cart-step:nth-child(even) .cart-step__box-text {
+    max-width: 100%;
+  }
 }
 
-@media(max-width: 920px) {
-	
+@media (max-width: 920px) {
 }
 
 @media (max-width: 500px) {
-	.welcome {
-		padding-top: 64px;
-	}
-	
-	.welcome__btn {
-		max-width: none;
-		font-size: 24px;
-		margin: 0 auto;
-	}
-	.about-project {
-		padding-top: 50px;
-		padding-bottom: 100px;
-	}
-	.about-project__title {
-		margin-bottom: 24px;
-	}
-	.about-project__text {
-		font-size: 20px;
-	}
-	.how-to-play {
-		padding-bottom: 100px;
-	}
-	.how-to-plat__title {
-		margin-bottom: 34px;
-	}
-	.dates {
-		padding-bottom: 100px;
-	}
-	.dates__content {
-		flex-direction: column;
-	}	
+  .welcome {
+    padding-top: 64px;
+  }
 
-	.contacts {
-		padding-bottom: 24px;
-	}
-	.contacts__text {
-		font-size: 34px;
-	}
+  .welcome__btn {
+    max-width: none;
+    font-size: 24px;
+    margin: 0 auto;
+  }
+  .about-project {
+    padding-top: 50px;
+    padding-bottom: 100px;
+  }
+  .about-project__title {
+    margin-bottom: 24px;
+  }
+  .about-project__text {
+    font-size: 20px;
+  }
+  .how-to-play {
+    padding-bottom: 100px;
+  }
+  .how-to-plat__title {
+    margin-bottom: 34px;
+  }
+  .dates {
+    padding-bottom: 100px;
+  }
+  .dates__content {
+    flex-direction: column;
+  }
+
+  .contacts {
+    padding-bottom: 24px;
+  }
+  .contacts__text {
+    font-size: 34px;
+  }
 }
