--- a/src/styles/buttons/gradientBtn.css
+++ b/src/styles/buttons/gradientBtn.css
@@ -3,14 +3,16 @@
 	align-items: center;
 	justify-content: center;
 	flex-wrap: wrap;
-	/* background: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%);
-	 */
 	background: #030306;
 	border: 5px solid #FFFFFF;
 	box-shadow: 2px 4px 0px #000000;
 	font-family: main;
 	color: #fff;
-
+	transition: all 0.2s ease-out;
 	padding: 16px 0; 
 	width: 100%;
+}
+
+.gradientBtn:hover {
+	background: #564B9C;
 }
