--- a/src/styles/header/header.css
+++ b/src/styles/header/header.css
@@ -26,9 +26,34 @@
   justify-content: flex-end;
 }
 .menu__item {
+  position: relative;
+  
   display: flex;
   align-items: center;
+  transition: all 0.25s ease-out;
+  
 }
+
+.menu__item::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 5px;
+  background-color: #EDEEF2;
+  
+  transform-origin: bottom right;
+  transform: scaleX(0);
+  transform-origin: bottom right;
+
+}
+
+.menu__item:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
 .menu__link {
   cursor: pointer;
   font-family: main;
