--- a/src/styles/PageHome/PageHome.css
+++ b/src/styles/PageHome/PageHome.css
@@ -106,7 +106,7 @@
 /* Dates section*/
 
 .dates {
-  padding: 0 0 0px 0;
+  
 }
 
 .datas__title {
@@ -134,39 +134,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-/* Contacts */
-
-.contacts {
-  padding-bottom: 70px;
-}
-
-.contacts__container {
-  justify-content: flex-end;
-  display: flex;
-  align-items: center;
-}
-
-.contacts__text {
-  margin-right: 30px;
-
-  font-family: "Pixel Font7";
-  font-weight: 250;
-  font-size: 40px;
-  line-height: calc(40 / 40 * 100%);
-  color: #1a1b56;
-}
-
-.contacts__link {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-.contactas__img {
-  position: relative;
-  width: 56px;
-  height: 56px;
 }
 
 @media (max-width: 1400px) {
@@ -199,7 +166,7 @@
     margin-bottom: 24px;
   }
   .about-project__text {
-    font-size: 20px;
+    font-size: 28px;
   }
   .how-to-play {
     padding-bottom: 100px;
@@ -207,17 +174,16 @@
   .how-to-plat__title {
     margin-bottom: 34px;
   }
+  .how-to-play__content {
+    padding: 1em;
+  }
   .dates {
-    padding-bottom: 100px;
+    padding-bottom: 0px;
   }
   .dates__content {
     flex-direction: column;
   }
-
-  .contacts {
-    padding-bottom: 24px;
-  }
-  .contacts__text {
-    font-size: 34px;
+  .call-to-action {
+    padding: 150px 0 150px 0;
   }
 }
