--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,17 +1,10 @@
+/* @import '../_vars.css'; */
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-#__next {
-  height: 100%;
-}
-
-main {
-  height: 100%;
 }
 
 a {
@@ -58,21 +51,13 @@ body::-webkit-scrollbar-button {
 html,
 body {
   min-height: 100%;
+  background-color: var(--background);
 }
 
 .wrapper {
   position: relative;
-  background-color: #030306;
   z-index: 1;
-  min-height: 100%;
-}
-
-main {
-  position: relative;
-  background-color: #d4d6d7;
-  background-image: url("/content/backgroungBase.jpg");
-  z-index: 1;
-  min-height: 100%;
+  /* min-height: 100%; */
 }
 
 /* Main container */
@@ -88,7 +73,7 @@ main {
   font-size: 48px;
   font-weight: 700;
   line-height: calc(93 / 64 * 100%);
-  color: #f3f3f3;
+  color: var(--text-white);
   text-shadow: 8px 8px 0px #030306;
 }
 
@@ -97,17 +82,9 @@ main {
   font-family: heading;
   font-size: 40px;
   line-height: calc(82 / 48 * 100%);
-
-  color: #EDEEF2;
-  /* Gradient */
-  /* background: linear-gradient(90deg, #f45f89 0%, #8d0b93 50%, #321575 100%); */
-  /* background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; */
-  /* Shadow */
-  /* filter: drop-shadow(2px 4px 0px #000000); */
-  /* -webkit-filter: drop-shadow(2px 4px 0px #000000); */
+  color: var(--text-white);
 }
+
 .title-section-white {
   font-family: "heading";
   font-style: normal;
@@ -116,18 +93,6 @@ main {
   line-height: calc(82 / 48 * 100%);
   color: #ffffff;
   text-shadow: 2px 4px 0px #000000;
-}
-
-.gradient-title {
-  font-family: serif;
-  font-family: progresspixel;
-  font-size: 30px;
-  line-height: calc(51 / 30 * 100%);
-  background: linear-gradient(90deg, #f45f89 0%, #8d0b93 50%, #321575 100%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  width: fit-content;
 }
 
 @media (max-width: 800px) {
@@ -152,17 +117,6 @@ main {
 
 @media (max-width: 500px) {
   .title-section {
-    font-size: 40px;
+    font-size: 20px;
   }
 }
-
-/* @mexin gradient-text {
-  background: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%);
-	-webkit-text-fill-color: transparent;
-	-webkit-background-clip: text;
-	background-clip: text;
-}
-
-@mexin gradient-box {
-
-} */
