--- a/src/styles/PageTeam/Team.css
+++ b/src/styles/PageTeam/Team.css
@@ -1,22 +1,20 @@
 .page-cart-team {
 	padding: 75px 0 126px 0;
+	color: #fff;
 }
 .page-cart-team__container {
 }
 .page-cart-item__body {
+	
 }
 
 
 .teamCart {
 	border: 10px solid;
-	border-image-source: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%);
-	border-image-slice: 1;
-	background-color: #fff;
 }   
 
 .teamCart__title-box {
 	margin: 72px 0 52px 0;
-	background: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%);
 	padding: 8px 0 8px 0 ;
 }
 .teamCart__title {
@@ -31,23 +29,23 @@
 	padding-bottom: 177px;
 
 
-	font-family: 'Pixel Font7';
-	font-size: 35px;
-	line-height: calc(35 / 35 * 100%);
-
+	/* font-family: 'Pixel Font7'; */
+	/* font-size: 35px;
+	line-height: calc(35 / 35 * 100%);*/
+	
    
 }
 .teamCart__item {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	gap: 40px
+	gap: 40px;
+	
 }
 .teamCart__team-name {
 	grid-column: 1;
 }
-.teamCart__title-h4 {
 
-}
+
 
 .teamCart__members {
 	grid-column: 2;
@@ -79,32 +77,31 @@
 	font-size: 25px;
 	display: block;
 	border: 3px solid;
-	border-image-source: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%);
-	border-image-slice: 1;
+	
+	
 	padding: 12px 21px;
 	box-shadow: 2px 4px 0px #000000;
-	background: #F3F3F3;
+	/* background: #F3F3F3; */
 	max-width: 502px;
 	overflow: hidden;
-	
+	color: #fff;
 	text-overflow: ellipsis;
 }
 .teamCart__btn-invite {
 	max-width: 207px;
 	font-size: 16px;
-	/* line-height: calc(27 / 16 * 100%); */
+	line-height: calc(27 / 16 * 100%);
 }
 
 
 @media(max-width: 800px) { 
-
 	.teamCart__title {
 		font-size: 30px;
 	}
 
 	.teamCart {
 		border: 5px solid;
-		border-image-source: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%);
+		/* border-image-source: linear-gradient(90deg, #F45F89 0%, #8D0B93 50%, #321575 100%); */
 		border-image-slice: 1;
 	} 
 
