--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  overscroll-behavior-y: none;
 }
 
 a {
@@ -96,7 +97,8 @@ body {
 }
 /* move to separate file */
 .background {
-  z-index: 100;
+  position: relative;
+  padding-bottom: 150px;
 }
 
 @media (max-width: 800px) {
