--- a/src/styles/PageTeams/PageTeams.css
+++ b/src/styles/PageTeams/PageTeams.css
@@ -2,7 +2,7 @@
 
 }
 .teams__title {
-
+  margin-bottom: 1em;
 }
 
 .teams__list {
@@ -11,29 +11,46 @@
   justify-content: center;
   gap: 30px;
 }
+.teams__item {
+  flex: 31%;
+  
+}
 
+@media (max-width: 820px) {
+  .teams__item {
+    flex: 45%;
+  }
+}
 .team-item {
-  min-width: 300px;
-  flex: 300px 0;
-
   color: #F3F3F3;
   font-family: main;
   font-size: 32px;
   cursor: pointer;
-
+  min-height: 380px;
+  max-height: 380px;
   border: 7px solid #F3F3F3;
 
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
   
   background-color: #15191F;
-  /* max-width: 600px; */
   padding: 10px;
-
 }
 
 .team-item:hover {
   border-color: #564B9C;
+}
+
+.team-item__title {
+  text-align: center;
+  max-height: 60px;
+  display: -webkit-box;
+-webkit-line-clamp: 2;
+-webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.team-item__date {
+  text-align: center;
 }
