--- a/src/styles/header/header.css
+++ b/src/styles/header/header.css
@@ -72,25 +72,22 @@
   }
 
   .menu__body {
-    /* padding: 50px; */
-    z-index: 2;
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    z-index: 2;
 
-    background-color: #d4d6d7;
-
+    background-color: #030306;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 
-    transition: transform 0.5s ease;
-    transform: translate(100%);
+    transition: all 0.5s ease 0s;
   }
-  .menu__body.active-menu {
-    transform: translate(0);
+   .active-menu.menu__body{
+    right: 0;
   }
 
   .menu__list {
