--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,19 +26,20 @@ body::-webkit-scrollbar {
 /* background of the scrollbar except button or resizer */
 body::-webkit-scrollbar {
   background-color: #fff;
-  width: 16px;
+  width: 6px;
 }
 
 /* background of the scrollbar except button or resizer */
 body::-webkit-scrollbar-track {
-  background-color: #fff;
+  /* background-color: #fff; */
+  background: rgba(21, 25, 31, 0.8);
   /* background: transparent; */
 }
 
 /* scrollbar itself */
 body::-webkit-scrollbar-thumb {
   background-color: #babac0;
-  border: 4px solid #fff;
+  border: 4px solid transparent;
 }
 
 /* set button(top and bottom of the scrollbar) */
@@ -91,7 +92,7 @@ body {
   font-weight: 700;
   font-size: 48px;
   line-height: calc(82 / 48 * 100%);
-  color: #ffffff;
+  color: #EDEEF2;
   text-shadow: 2px 4px 0px #000000;
 }
 /* move to separate file */
