fixed scrolling off after burger click added new dates for landing

--- a/src/styles/PageTeams/PageTeams.css
+++ b/src/styles/PageTeams/PageTeams.css
@@ -13,12 +13,11 @@
 }
 .teams__item {
   flex: 31%;
-  
 }
 
 @media (max-width: 820px) {
   .teams__item {
-    flex: 45%;
+    /* flex: 45%; */
   }
 }
 .team-item {
