--- a/src/styles/PageTeams/PageTeams.css
+++ b/src/styles/PageTeams/PageTeams.css
@@ -6,21 +6,21 @@
 }
 
 .teams__list {
+  /* для браузеров без grid'а, будет выглядеть по-уёбски но нормально*/
   display: flex;
   flex-wrap: wrap;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+
   justify-content: flex-start;
   gap: 30px;
 }
+
 .teams__item {
-  flex: 31%;
-  max-width: 31%;
+  flex: 31% 1 1;
 }
 
-@media (max-width: 820px) {
-  .teams__item {
-    /* flex: 45%; */
-  }
-}
 .team-item {
   color: #F3F3F3;
   font-family: main;
